--- a/app/app.css
+++ b/app/app.css
@@ -28,3 +28,13 @@
   content: "";
   padding: 0;
 }
+
+.spoiler {
+  max-width: 200px;
+}
+
+.spoiler .body {
+  background-color: #e0eaf1;
+  border: 1px solid #555;
+  padding: 5px;
+}
