Task 3: use isolate scope for spoiler name

--- a/app/components/spoiler/spoiler.html
+++ b/app/components/spoiler/spoiler.html
@@ -1,5 +1,5 @@
 <div class="spoiler">
-    <a href="" ng-click="toggle()" class="header">{{spoilerName}}</a>
+    <a href="" ng-click="toggle()" class="header">{{name}}</a>
     <div ng-transclude ng-show="isShowing" class="body"></div>
 </div>
 
