--- a/app/app.css
+++ b/app/app.css
@@ -38,3 +38,15 @@
   border: 1px solid #555;
   padding: 5px;
 }
+
+.user-info {
+  background-color: #ddd;
+  padding: 5px;
+  max-width: 200px;
+  margin-left: 20px;
+}
+
+.user-info .header {
+  font-size: 24px;
+  line-height: 48px;
+}
